# opencv

./: .gitignore  CMakeLists.txt  main.cpp
